kubernetes/apps/security/authentik/app/referencegrant.yaml
---
# yaml-language-server: $schema=https://schemas.materia.wtf/gateway.networking.k8s.io/referencegrant_v1beta1.json
# adapted from https://github.com/authelia/authelia/blob/master/docs/content/integration/proxies/envoy.md#secure-route
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ref-authentik-svc
spec:
  from:
    - &policy
      group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: database
    - <<: *policy
      namespace: flux-system
    - <<: *policy
      namespace: media
    - <<: *policy
      namespace: network
    - <<: *policy
      namespace: o11y
    - <<: *policy
      namespace: storage
    - <<: *policy
      namespace: system
    - <<: *policy
      namespace: torrents
  to:
    - group: ''
      kind: Service
      name: authentik-server
