kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.materia.wtf/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    gatus.home-operations.com/path: "/-/health/live/"
    gatus.home-operations.com/conditions: "['[STATUS] == 200']"
spec:
  hostnames:
    - auth.materia.wtf
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
